fix: HTML validation - all app template fixes

--- a/bag/templates/bag/quantity-form.html
+++ b/bag/templates/bag/quantity-form.html
@@ -37,4 +37,4 @@
 <a class="update-link text-ib-success weight-semibold text-decoration-none float-start">UPDATE</a>
 
 <!-- Remove Link -->
-<a class="remove-item text-ib-warning weight-semibold text-decoration-none float-end" id="remove_{{ item.item_id }}">REMOVE</a>
+<a class="remove-item text-ib-warning weight-semibold text-decoration-none float-end" data-id="remove_{{ item.item_id }}">REMOVE</a>
