--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -162,7 +162,7 @@
                     
                         <!-- Complete Order Button -->
                         <button id="submit-button" class="ib-button ib-button-blue text-decoration-none text-ib-light font-title weight-bold ms-2 shadow-sm">
-                            <p class="d-inline me-1">PLACE ORDER</p>
+                            <span class="d-inline me-1">PLACE ORDER</span>
                             <i class="fas fa-lock d-inline"></i>
                         </button>
                     </div>
