--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -67,10 +67,13 @@
                         <span class="text-ib-warning weight-semibold ib-lh-2">{{error}}</span>
                     {% endfor %}
 
+
                     <!-- Image Selection -->
-                    {{ form.image.label_tag }}
-                    <em class="d-inline ms-2">Images should be in a 16:9 aspect ratio</em>
-                    {{ form.image }}
+                    <div class="mt-4 mb-2">
+                        <p class="p-label-replace d-inline">Product Image:</p>
+                        <em class="d-inline ms-2">Images should be in a 16:9 aspect ratio</em>
+                        {{ form.image }}
+                    </div>
 
                     <!-- Discontinue? -->
                     <hr class="mt-5 mb-2">
@@ -104,6 +107,7 @@
                 </form>
             </div>
         </div>
+    </div>
 {% endblock %}
 
 {% block extra_js_end %}
