--- a/templates/base.html
+++ b/templates/base.html
@@ -262,7 +262,7 @@
             <!-- Scroll to Top JS -->
             <script src="{% static 'js/scroll_top.js' %}"></script>
             <!-- Toasts / Messages JS-->
-            <script type="text/javascript">
+            <script>
                 $('.toast').toast('show');
             </script>
             <!-- Stripe JS -->
