--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -131,7 +131,7 @@
 {% endblock %}
 
 {% block extra_js_end %}
-    <script type="text/javascript">
+    <script>
         // Update quantity on click
         $('.update-link').click(function(e) {
             var form = $(this).prev('.update-form');
@@ -141,7 +141,7 @@
         // Remove item and reload on click
         $('.remove-item').click(function(e) {
             var csrfToken = "{{ csrf_token }}";
-            var itemId = $(this).attr('id').split('remove_')[1];
+            var itemId = $(this).attr('data-id').split('remove_')[1];
             var url = `/bag/remove/${itemId}/`;
             var data = {'csrfmiddlewaretoken': csrfToken};
 
