--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -66,7 +66,7 @@
                 </div>
 
                 <!-- Confirm Delete Modal - Defensive Programming -->
-                <div class="modal fade" id="modal-{{ product.id }}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal fade" id="modal-{{ product.id }}" tabindex="-1" role="dialog" aria-hidden="true">
                     <div class="modal-dialog" role="document">
                         <div class="modal-content">
                             <div class="modal-header justify-content-between bg-dark-grey py-3">
@@ -84,8 +84,7 @@
                                         <p>Are you sure you want to delete this product: <strong>"{{ product.name }}"</strong>?
                                         <br><strong>This cannot be undone.</strong></p>
                                     {% endif %}
-                                </p>
-                            </div>
+                                </div>
                             <div class="modal-footer pt-0">
                                 <button type="button" class="edit-del-btn dismiss-btn font-title text-decoration-none weight-regular align-middle me-2" data-dismiss="modal">CLOSE</button>
                                 <a href="{% url 'delete_product' product.id %}" class="edit-del-btn del-btn font-title text-decoration-none weight-bold align-middle">{% if protected_product %}REMOVE{% else %}DELETE{% endif %}</a>
@@ -210,12 +209,12 @@
                                 {% endif %}
 
                                 <!-- Delete Review - Review Author or Superuser Only -->
-                                <button type="button" data-toggle="modal" data-target="#modal-{{ review.id }}" class="edit-del-btn del-btn font-title text-decoration-none weight-bold align-middle">DELETE</a>
+                                <button type="button" data-toggle="modal" data-target="#modal-{{ review.id }}" class="edit-del-btn del-btn font-title text-decoration-none weight-bold align-middle">DELETE</button>
                             </div>
                         </div>
 
                         <!-- Confirm Delete Modal - Defensive Programming -->
-                        <div class="modal fade" id="modal-{{ review.id }}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                        <div class="modal fade" id="modal-{{ review.id }}" tabindex="-1" role="dialog" aria-hidden="true">
                             <div class="modal-dialog" role="document">
                                 <div class="modal-content">
                                     <div class="modal-header justify-content-between bg-dark-grey py-3">
