--- a/templates/includes/mobile-nav-bar.html
+++ b/templates/includes/mobile-nav-bar.html
@@ -37,14 +37,14 @@
             
             <!-- Account Dropdown Menu -->
             <li class="list-inline-item dropdown">
-                <a class="text-dark-grey nav-link upper-nav-link" href="#" id="user-options"
+                <a class="text-dark-grey nav-link upper-nav-link" href="#" id="user-options-mobile"
                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <div class="text-center">
                         <div><i class="fas fa-user fa-lg"></i></div>
                         <p class="my-0 font-body">Account</p>
                     </div>
                 </a>
-                <div class="dropdown-menu text-end border-0 account-dropdown shadow bg-ib-light" aria-labelledby="user-options">
+                <div class="dropdown-menu text-end border-0 account-dropdown shadow bg-ib-light" aria-labelledby="user-options-mobile">
                     {% if request.user.is_authenticated %}
                     {% if request.user.is_superuser %}
                     <a href="{% url 'manage' %}" class="dropdown-item">Site Management</a>
