test/fix: HTML Validation changes allauth templates

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1233,9 +1233,7 @@ label[for="id_price"] {
     width: calc(var(--s)/2 + var(--m));
     float: left;
     height: 120%;
-    shape-outside: repeating-linear-gradient(     
-                        #0000 0 calc(var(--f) - 3px),      
-                        #000  0 var(--f));
+    shape-outside: repeating-linear-gradient(#0000 0 calc(var(--f) - 3px), #000 0 var(--f));
 }
 
 
