--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -43,7 +43,7 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
   {{ form.password|add_class:"ib-form-field mb-3 px-2 py-2 font-body text-dark-grey" }}
 
   <div class="d-flex align-items-end justify-content-end mt-2">
-    <label class="form-check-label ib-lh-1" for="id-save-info">Remember me:</label>
+    <label class="form-check-label ib-lh-1" for="id_remember">Remember me:</label>
     {{ form.remember|add_class:"form-check-input auth-form-check-input m-0 ms-2" }}
   </div>
 
