--- a/templates/allauth/account/password_reset.html
+++ b/templates/allauth/account/password_reset.html
@@ -33,5 +33,5 @@
         </div>
     </form>
 
-    <p class="mt-4 text-center">{% blocktrans %}Please <a href="{% url 'contact_us' %}" class=" text-blue weight-semibold text-decoration-none text-link-blue">contact us</a> if you have any trouble resetting your password.{% endblocktrans %}</p>
+    <p class="mt-4 text-center">{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
 {% endblock %}
