--- a/templates/allauth/account/verified_email_required.html
+++ b/templates/allauth/account/verified_email_required.html
@@ -14,8 +14,7 @@ you are who you claim to be. For this purpose, we require that you
 verify ownership of your e-mail address. {% endblocktrans %}</p>
 
 <p class="text-ib-dark">{% blocktrans %}We have sent an e-mail to you for
-verification. Please click on the link inside this e-mail. Please
-<a href="{% url 'contact_us' %}" class=" text-blue weight-semibold text-decoration-none text-link-blue">contact us</a> if you do not receive it within a few minutes.{% endblocktrans %}</p>
+verification. Please click on the link inside this e-mail. Please contact us if you do not receive it within a few minutes.{% endblocktrans %}</p>
 
 <p class="text-ib-dark">{% blocktrans %}Note: you can still <a href="{{ email_url }}" class="weight-semibold text-blue text-decoration-none text-link-blue">change your e-mail address</a>.{% endblocktrans %}</p>
 
